Fix user badge overflow at 1024px by reducing width to 180px

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ table th {
         position: absolute;
         top: 16px;
         right: 20px;
-        width: 325px;
+        width: 180px;
         margin: 0;
     }
 
